--- a/references.bib
+++ b/references.bib
@@ -16,4 +16,9 @@
   numpages = {15}
 }
 
-
+@book{econwool,
+  author = {Wooldridge, Jeffrey M.},
+  title = {Introdução à Econometria},
+  year = {2019},
+  publisher = {Cengage},
+}
