--- a/index.qmd
+++ b/index.qmd
@@ -1,9 +1,3 @@
-# Preface {.unnumbered}
+# Prefácio {.unnumbered}
 
-This is a Quarto book.
-
-To learn more about Quarto books visit <https://quarto.org/docs/books>.
-
-```{r}
-1 + 1
-```
+Este é um resumo do livro "**Introdução à Econometria**" [see @econwool]. Essa é uma forma de revisar o conteúdo e aprender a utilizar o Quarto Book.
