--- a/01_cap1.qmd
+++ b/01_cap1.qmd
@@ -19,9 +19,7 @@ $x_4$ = probabilidade de ser capturado\
 
 Um modelo econômico pode ser escrito como uma função mais geral $f(.)$.
 
-A partir de um modelo econômico, podemos especificar o **modelo econométrico** a partir dos dados disponíveis. 
-$$crime = \beta_0 + \beta_{1}wage_m + \beta_{2}otherinc + \beta_{3}freqarr + \mu$$
-Com a definição dos modelos econométricos, poderíamos levantar a hipótese de que $\beta_2 = 0$. A análise empírica, por definição, requer dados. 
+A partir de um modelo econômico, podemos especificar o **modelo econométrico** a partir dos dados disponíveis. $$crime = \beta_0 + \beta_{1}wage_m + \beta_{2}otherinc + \beta_{3}freqarr + \mu$$ Com a definição dos modelos econométricos, poderíamos levantar a hipótese de que $\beta_2 = 0$. A análise empírica, por definição, requer dados.
 
 ## Estrutura dos dados econômicos
 
@@ -35,8 +33,7 @@ Observações de uma ou várias variáveis ao longo do tempo. Diferentemente do 
 
 ### Cortes transversais agrupados
 
-O conjunto de dados tem característica tanto de corte transversal quanto de séries temporais.
-Muito usado para analisar os efeitos de uma política de governo. Por exemplo, são coletados dados anteriores e posteriores a uma política pública.
+O conjunto de dados tem característica tanto de corte transversal quanto de séries temporais. Muito usado para analisar os efeitos de uma política de governo. Por exemplo, são coletados dados anteriores e posteriores a uma política pública.
 
 ### Dados de painel
 
